fix: fixed add task modal spacing

--- a/src/app/pages/add-task/add-task.scss
+++ b/src/app/pages/add-task/add-task.scss
@@ -69,7 +69,6 @@
 			overflow: hidden;
 
 			&__content {
-				flex: 1;
 				overflow-y: auto;
 				padding-right: 24px;
 				margin-bottom: $spacing-sm;
