--- a/src/app/pages/board/board.scss
+++ b/src/app/pages/board/board.scss
@@ -110,4 +110,7 @@ section {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
+	app-add-task {
+		height: 100%;
+	}
 }
